Solved Notifications problems.

--- a/Resources/Localizable/Localizable.xcstrings
+++ b/Resources/Localizable/Localizable.xcstrings
@@ -2,6 +2,7 @@
   "sourceLanguage" : "es",
   "strings" : {
     "¡Sesión completada!" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
